# Igra-mgt

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SHARE.md  USER_GUIDE.md  WALLET_API.md  build.rs  build.sh  install.sh  kaswallet_cli.rs  quick-install.sh  test_balance_only.rs  test_utxo.rs  test_wallet_grpc.rs  x-post-revised.txt  x-post.txt
docs/: architecture.md  changelog.md  configuration.md  development.md  installation.md  troubleshooting.md  tui-guide.md  web-ui.md
examples/wallet-grpc-client/: Cargo.toml  INDEX.md  PYTHON_EXAMPLE.md  QUICK_START.md  README.md  build.rs
examples/wallet-grpc-client/src/: main.rs
igra-web-ui/: README.md  index.html  package.json  vite.config.js
igra-web-ui/src/: App.css  App.jsx
igra-web-ui/src/components/: ConfigPanel.jsx  LogViewer.jsx  LoginPage.css  LoginPage.jsx  MonitoringPanel.jsx  ProfilesPanel.jsx  ServicesPanel.jsx  StoragePanel.jsx  TransactionsPanel.jsx  UpdateBanner.jsx  WalletDetailModal.jsx  WalletsPanel.jsx
igra-web-ui/src/services/: api.js
proto/: kaspawalletd.proto
src/: app.rs  cli.rs  lib.rs  main.rs
src/core/: backup.rs  config.rs  docker.rs  health.rs  l2_monitor.rs  log_parser.rs  metrics.rs  mod.rs  reth_metrics.rs  rpc.rs  ssl.rs  storage.rs  updater.rs  versions.rs  wallet.rs
src/screens/: dashboard.rs  mod.rs  watch.rs
src/server/: auth.rs  handlers.rs  mod.rs  routes.rs  static_files.rs  websocket.rs
src/utils/: app_config.rs  constants.rs  helpers.rs  mod.rs
src/widgets/: mod.rs
