[package]
name = "igra-cli"
version = "0.4.0"
edition = "2021"
authors = ["Merlin"]
description = "Terminal-based management CLI for IGRA Orchestra nodes"
license = "MIT"
repository = "https://github.com/Zorglub4242/Igra-mgt"
homepage = "https://github.com/Zorglub4242/Igra-mgt"
documentation = "https://github.com/Zorglub4242/Igra-mgt#readme"
keywords = ["igra", "kaspa", "blockchain", "tui", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
build = "build.rs"

[lib]
name = "igra_cli"
path = "src/lib.rs"

[[bin]]
name = "igra-cli"
path = "src/main.rs"

[[bin]]
name = "test_wallet_grpc"
path = "test_wallet_grpc.rs"

[[bin]]
name = "test_balance_only"
path = "test_balance_only.rs"

[[bin]]
name = "kaswallet-cli"
path = "kaswallet_cli.rs"

[[bin]]
name = "test_utxo"
path = "test_utxo.rs"

[dependencies]
# TUI Framework
ratatui = "0.26"
crossterm = "0.27"

# Docker Integration
bollard = "0.16"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Configuration & Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dotenv = "0.15"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }

# HTTP/RPC Testing
reqwest = { version = "0.11", features = ["json"] }

# Ethereum RPC client for L2 monitoring
ethers = { version = "2.0", features = ["ws", "rustls"] }

# gRPC for kaswallet-daemon integration
tonic = "0.11"
prost = "0.12"

# Kaspad wRPC client for transaction history
kaspa-wrpc-client = { path = "../../build/repos/rusty-kaspa/rpc/wrpc/client" }
kaspa-rpc-core = { path = "../../build/repos/rusty-kaspa/rpc/core" }
kaspa-addresses = { path = "../../build/repos/rusty-kaspa/crypto/addresses" }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }
humantime = "2.1"

# Additional Utilities
regex = "1.10"
colored = "2.1"
dirs = "5.0"
indicatif = "0.17"

# System
sysinfo = "0.30"
rand = "0.8"

[dev-dependencies]
tempfile = "3.10"
mockall = "0.12"

[build-dependencies]
tonic-build = "0.11"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
